--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://flmann.github.io"
 languageCode = "en-us"
 title = "Florian Mann"
 theme = "sourgough-starter"
